# bantrly-lesson-generator

./: .gitignore  .hfignore  README.md  app.py  groq_test.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/examples/: bantrly_example_lessons.json
data/skills/: skill_taxonomy.json
deliverables/: README.md  bantrly_deck.pptx  lesson-blueprint.md
notebooks/: 01_schema.ipynb  02_file_handler.ipynb  03_checks.ipynb  04_grade_specs.ipynb  05_templates.ipynb  06_validator.ipynb  07_full_pipeline.ipynb  08_skill_selector.ipynb
src/core/: generator.py  schema.py  skill_selector.py
src/guardrails/: checks.py
src/prompts/: grade_specs.py  templates.py
src/utils/: file_handler.py  validator.py
